<resources>
    <string name="app_name">Contretemps</string>
    <string name="app_description">Revue de critique communiste</string>
    <string name="activity_settings">Paramètres</string>
    <string name="nav_t_catageories">Catégories</string>
    <string name="nav_home">Accueil</string>
    <string name="nav_conjoncture">Conjoncture</string>
    <string name="nav_theorie">Théorie</string>
    <string name="nav_strategie">Stratégie</string>
    <string name="nav_culture">Culture</string>
    <string name="nav_histoire">Histoire</string>
    <string name="nav_recits">Récits</string>
    <string name="nav_enquete">Enquête</string>
    <string name="nav_dossier">Dossiers</string>
    <string name="nav_fav">Favoris</string>
    <string name="nav_info">À propos</string>
    <string name="menu_fav">Ajouter aux favoris</string>
    <string name="menu_browser">Ouvrir dans le navigateur</string>
    <string name="menu_share">Partager</string>
    <string name="menu_refresh">Rafraîchir la page</string>
    <string name="menu_search">Rechercher</string>
    <string name="error">Une erreur s\'est produite.</string>
    <string name="error_internet">Une erreur s\'est produite. Vérifiez votre connexion internet.</string>
    <string name="settings_title">Informations</string>
    <string name="settings_ctwebsite_title">Contretemps.eu</string>
    <string name="settings_ctwebsite_description">Cliquez ici pour accéder au site web de Contretemps</string>
    <string name="settings_developer_title">Développer par @pigeoff</string>
    <string name="settings_developer_description">Cliquez ici pour accéder au site web du développeur</string>
    <string name="settings_libraries_title">Bibliothèques open source</string>
    <string name="settings_libraries_description">Afficher les liences des bibliothèques utilisées pour concevoir cette application</string>
    <string name="settings_item_libraries">Bibliothèques utilisées</string>
    <string name="settings_licence_title">Licence</string>
    <string name="settings_licence_description">Le contenu original publié par Contretemps est mis à disposition selon les termes de la licence Creative Commons « Attribution – Pas d’Utilisation Commerciale – Pas de Modification 3.0 France (CC BY-NC-ND 3.0 FR) ».</string>
    <string name="notif_channel_title">Notifications quotidiennes</string>
    <string name="notif_channel_str">Notifications quand un nouvel article est publié.</string>
    <string name="notif_title">Nouvel article publié</string>
</resources>